Added hostname field to api response
